--- a/styles/components.css/loadMore.css
+++ b/styles/components.css/loadMore.css
@@ -5,14 +5,15 @@
     height: 2.8125rem;
     justify-content: center;
     align-items: center;
-    opacity: .5;
+    /* opacity: .7; */
     cursor: pointer;
     border-radius: .375rem;
+    transition: filter .3s;
 }
 .loadMore span{
     color: white;
 }
 .loadMore:hover{
-    opacity: 1;
-    transition: .5s;
+    filter: brightness(0.9);
+    transition: .5s ease-in-out;
 }
