--- a/styles/components.css/tagBag.css
+++ b/styles/components.css/tagBag.css
@@ -1,8 +1,8 @@
 .tag-bag{
     display: flex;
     background-color: #4A4747;
-    width: 121px;
-    height: 34px;
+    width: 7.5625rem;
+    height: 2.125rem;
     border-radius: 15.25rem;
     justify-content: space-between;
     align-items: center;
@@ -19,7 +19,7 @@
     margin-right: 1rem;
 }
 .tag-bag .img-mask{
-    margin-left: .8rem;
+    margin-left: .5rem;
     margin-bottom: .1rem;
     display: flex;
     width: 1.5rem;
