--- a/styles/components.css/status-modal.css
+++ b/styles/components.css/status-modal.css
@@ -1,7 +1,7 @@
 .stats{
     display: flex;
     flex-direction: column;
-    gap: 13px;
+    gap: 14px;
 }
 
 .single-stats{
@@ -14,6 +14,9 @@
     align-items: center;
     flex-direction: row;
     font-size: 12px;
+}
+.stats-box h4{
+    margin-bottom: .75rem;
 }
 .stats-bar{
     position: relative;
@@ -49,7 +52,7 @@
     width: 70%;
 }
 .bar.attack{
-    width: 30%;
+    width: 50%;
 }
 .bar.defense{
     width: 53%;
