--- a/styles/header.css
+++ b/styles/header.css
@@ -2,7 +2,7 @@
     background-image: url(../assets/bg-dark.svg) ;
     margin: 0;
     width: 100%;
-    height: 62.125rem;
+    height: 994px;
     background-repeat: no-repeat;
     background-position: top ;
     z-index: 0;
@@ -12,55 +12,82 @@
     background-image: url(../assets/bg-red.svg);
 }
 .header{
-    height: 7rem;
+    height: 112px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 0 6.9375rem;
+    margin: 0 111px;
 }
-@media (max-width:560px) {
+@media (max-width:43.75rem) {
     .header{
         display: flex;
-        margin: 0 2rem;
+        margin: 0 32px;
     }
     .top-section{
     }
     .header img{
-        max-width: 7rem;
+        max-width: 112px;
     }
     h1{
-        font-size: 3rem;
+        font-size: 48px;
+        text-align: center;
     }
     h2{
-        font-size: 1rem;
+        font-size: 16px;
+        text-align: center;
+    }
+    h3{
         text-align: center;
     }
     .pokeball-container.ultra img{
-        margin-top: 1rem;
+        margin-top: 16px;
     }
     .pokeball-container img{
-        max-width: 32rem;
+        max-width: 512px;
     }
     .lighting img{
-        max-width: 2rem;
+        max-width: 32px;
     }
     .down-pointer{
-        left: .625rem !important;
+        left: 10px !important;
     }
     .pokeball-container.ultra img{
-        max-width: 14rem;
+        max-width: 224px;
     }
     .search-container{
-        color: red;
+        display: flex;
+        justify-content: center !important;
     }
+    .search{
+        max-width: 60%;
+        margin-right: 30px;
+    }
+    .type-list{
+        display: none;
+    }
+    .list{
+        display: none;
+        border: none !important;
+        position: absolute;
 
+    }
+    .main{
+        display: flex;
+        width: 100%;
+        align-items: center;
+        justify-content: right;
+        margin-left: 1.875rem;
+    }
+    .pokemons-card{
+        padding-left: 0 !important;
+    }
 
 }
 
 
 
 .title-section{
-    margin-top: 1.3125rem;
+    margin-top: 21px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -70,42 +97,42 @@
     animation: float 5s ease-in-out infinite;
     pointer-events: none;
     position: relative;
-    max-height: 10rem;
+    max-height: 160px;
     height: 100%;
     width: 100%;
-    margin-top: 7.7rem;
-    margin-left: .375rem;
+    margin-top: 123.2px;
+    margin-left: 6px;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 .pokeball-container.ultra{
-    margin-top: 6.9rem;
+    margin-top: 110.4px;
 }
 .pokeball.ultra{
-    margin-top: 3rem;
+    margin-top: 48px;
 }
 .lighting img{
     animation: growing 5s ease-in-out infinite;
-    max-width: 10.625rem;
-    max-height: 3.75rem;
-    margin-bottom: -1.875rem;
-    margin-top: 1.875rem;
+    max-width: 170px;
+    max-height: 60px;
+    margin-bottom: -30px;
+    margin-top: 30px;
 }
 .lighting.yellow img{
-    margin-bottom: -.4rem;
+    margin-bottom: -6.4px;
 
 }
 .down-pointer{
     cursor: pointer;
     position: absolute;
-    top: 31.25rem;
-    left: 3.125rem;
+    top: 500px;
+    left: 50px;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    max-width: 40px;
+    max-width: 2.5rem;
     transition: .4s;
 }
 .down-pointer:hover{
@@ -115,14 +142,14 @@
 .down-pointer h5{
     pointer-events: none;
     transform: rotate(270deg);
-    margin-bottom: 1.8rem;
+    margin-bottom: 28.8px;
 }
 @keyframes float{
 	0%,100%{
 		transform:translatey(0)
 	}
 	50%{
-		transform:translatey(-1rem)
+		transform:translatey(-16px)
 	}
 }
 @keyframes growing {
