--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,7 @@
 @import './styles/main..css';
 @import './styles/load-more-section.css';
 @import './styles/components.css/select-input.css';
+@import './styles/responsivity.css';
 
 :root{
     --bg-color:#242020;
