--- a/styles/components.css/tagType.css
+++ b/styles/components.css/tagType.css
@@ -1,9 +1,10 @@
 .tag-type{
     display: inline-block;
+    letter-spacing: 1px;
     font-size: .9rem;
     border-radius: 2px;
     line-height: 1.7rem;
-    padding: 0 1.8rem;
+    padding: 0 1.3rem;
     font-weight: 500; 
 }
 
