--- a/styles/components.css/select-input.css
+++ b/styles/components.css/select-input.css
@@ -1,45 +1,81 @@
 .select-input-type{
-    margin-top: 15rem;
     position: relative;
-    background-color: #4A4747;
-    max-width: 25rem;
-    width: 100%;
-    height: 3.5rem;
-    border-radius: 7.625rem;
-    border-radius: 3.5rem;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    cursor: pointer;
+    display: none;
+    width: 15rem;
+    flex-direction: column;
+    margin-top: 30px;
+    background-color: #332d2d;
+    z-index: 50;
 }
-.select-input-div{
-    position: absolute; 
-    width: 50%;
-    top: 2rem;
-    height: 20rem;
+.arrow-down-select{
+    width: 1rem;
+}
+.type-selected{
+    display: flex;
+    align-items: center;
+    width: 7.5rem;
+    padding-left: .5rem;
+    text-align: start;
+}
+.type-selected img{
+    width: 1rem;
+    height: 1rem;
+    margin-right: .5rem;
+}
+.select-button{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border: none;
+    cursor: pointer;
+    height: 2rem;
+    border-radius: .3rem;
+    background-color: #4A4747;
 }
 .select-input-type ul{
-    overflow-x: scroll;
-    height: 150px;
-    max-width: 25rem;
-    width: 100%;
     position: absolute;
-    visibility: hidden;
+    display: none;
+    cursor: pointer;
+    background-color: #242420;
     text-align: center;
     flex-direction: column;
-    gap: 1rem;
+    margin-top: 2rem;
+    height: 8rem;
+    width: 100%;
+    overflow-y: auto;
 }
-.select-input-type ul.ativo{
-    visibility: visible;
+.select-input-type ul.active{
+    display: flex;
+    z-index: 0;
 }
-.init {
-        visibility: visible;
-        display: block ;
-        background-color: white;
-        position: absolute;
-     }
-
-     
-.select-input-type ul:focus-within {
-    outline: #666A6D 2px double;
+  
+  /* Works on Chrome, Edge, and Safari */
+  .select-input-type ul::-webkit-scrollbar {
+    width: .3rem;
+  }
+  
+  .select-input-type ul::-webkit-scrollbar-track {
+    background: transparent;
+  }
+  
+  .select-input-type ul::-webkit-scrollbar-thumb {
+    background-color: #f33c3c3d;
+    border-radius: 20px;
+    border: none;
+  }
+.select-input-type ul li:hover{
+    background-color: #4A4747;
+    
+}
+.select-input-type ul li img{
+    height: 15px;
+}
+.select-input-type ul li{
+    padding: .625rem;
+    width: 100%;
+}
+.select-input-type img{
+    height: 30px;
 }
