--- a/styles/responsivity.css
+++ b/styles/responsivity.css
@@ -120,7 +120,6 @@
     }
     .right-container h4{
         text-align: center;
-        color: #e6e6e6;
     }
     .general-info{
         display: flex;
@@ -139,7 +138,7 @@
         flex-direction: row;
     }
     .weakness{
-        margin-top: .5rem;
+        margin-top: 1rem;
     }
     ul.weak{
         justify-content: center;
@@ -242,7 +241,6 @@
     }
     .right-container h4{
         text-align: center;
-        color: #e6e6e6;
     }
     .general-info{
         display: flex;
