--- a/styles/components.css/modalLeft.css
+++ b/styles/components.css/modalLeft.css
@@ -14,6 +14,7 @@
 .left-container .img-box img{
     max-height: 12rem;
     max-width: 12rem;
+    min-height: 8rem;
 }
 .icon-box{
     position: relative;
