--- a/styles/responsivity.css
+++ b/styles/responsivity.css
@@ -1,10 +1,18 @@
 @import './components.css/bg-left-responsivty.css';
 @media (max-width: 768px) {
+    
+    html{
+        overflow-x: hidden;
+    }
+    .swiper-wrapper{
+        margin: 0;
+        padding: 0;
+        width: 100%;
+        overflow: hidden;
+    }
     .header{
         display: flex;
-        margin: 0 32px;
-    }
-    .top-section{
+        margin: 0 2rem;
     }
     .header img{
         max-width: 112px;
@@ -68,7 +76,6 @@
     .main{
         position: relative;
         display: flex;
-        width: 100%;
         justify-content: center;
     }
     .card{
@@ -84,9 +91,6 @@
         display: flex;
         flex-direction: column;
         border-radius: 1rem;
-    }
-    .modal.ativo{
-
     }
     .left-container{
         height: 10rem;
@@ -296,12 +300,16 @@
         
     }
     .infos{
-        margin-top: 0;
-        gap: 0.4rem;
+        gap: 0.1rem;
+        margin-right: .75rem;
     }
     
     .stats-bar{
         margin-top: .4rem;
+    }
+    .single-stats span{
+        font-size: .7rem;
+        width: 85px;
     }
     .left-footer-part span{
         font-size: .8rem;
