--- a/styles/components.css/select-input.css
+++ b/styles/components.css/select-input.css
@@ -1,8 +1,10 @@
 .select-input-type{
     position: relative;
     display: none;
-    width: 15rem;
+    width: 100%;
+    height: 3rem;
     flex-direction: column;
+    border-radius: .5rem;
     margin-top: 30px;
     background-color: #332d2d;
     z-index: 50;
@@ -30,8 +32,8 @@
     justify-content: space-between;
     border: none;
     cursor: pointer;
-    height: 2rem;
-    border-radius: .3rem;
+    height: 100%;
+    border-radius: .5rem;
     background-color: #4A4747;
 }
 .select-input-type ul{
@@ -41,8 +43,8 @@
     background-color: #242420;
     text-align: center;
     flex-direction: column;
-    margin-top: 2rem;
-    height: 8rem;
+    margin-top: 3rem;
+    height: 10rem;
     width: 100%;
     overflow-y: auto;
 }
@@ -73,7 +75,7 @@
     height: 15px;
 }
 .select-input-type ul li{
-    padding: .625rem;
+    padding: .7rem;
     width: 100%;
 }
 .select-input-type img{
