--- a/styles/main..css
+++ b/styles/main..css
@@ -60,11 +60,11 @@
 }
 
 .zero-pokemons{
-    padding: 20px 20px;
+    padding: 48px 20px;
     display: flex;
-    flex-direction: row-reverse;
+    flex-direction: row;
     justify-content: space-between;
-    height: 12rem;
+    max-height: 14rem;
     background: #332d2d;
     box-shadow: 0px 10px 10px -5px #5a555573 ;
     border-radius: 12px;
