--- a/styles/components.css/modal.css
+++ b/styles/components.css/modal.css
@@ -9,7 +9,7 @@
 }
 
 .box {
-  animation: from-bottom ease-in .1s;
+  animation: from-bottom ease-in 0.1s;
   background-color: rgba(255, 255, 255, 0);
   width: 100%;
   max-height: 31.75rem;
@@ -18,7 +18,6 @@
   display: flex;
   border-radius: 1rem;
 }
-
 
 .modal.ativo {
   visibility: visible;
